--- a/src/main/resources/assets/grunkuscraft/lang/en_us.json
+++ b/src/main/resources/assets/grunkuscraft/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.grunkuscraft.niobium": "Niobium",
   "item.grunkuscraft.raw_niobium": "Raw Niobium",
   "item.grunkuscraft.niobium_nugget": "Niobium Nugget",
+  "item.grunkuscraft.niobium_sword": "Niobium Sword",
 
   "block.grunkuscraft.niobium_block": "Block of Niobium",
   "block.grunkuscraft.raw_niobium_block": "Block of Raw Niobium",
